# mawaku-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  codex_config.toml
.github/workflows/: ci.yml  release.yml
docs/: crates-io-publishing-tutorial.md  publishing-guide.md
mawaku-rs/: Cargo.toml  Dockerfile
mawaku-rs/mawaku-cli/: Cargo.toml
mawaku-rs/mawaku-cli/src/: main.rs  tests.rs
mawaku-rs/mawaku-config/: Cargo.toml
mawaku-rs/mawaku-config/src/: lib.rs  tests.rs
mawaku-rs/mawaku-gemini/: Cargo.toml
mawaku-rs/mawaku-gemini/src/: lib.rs  tests.rs
mawaku-rs/mawaku-image/: Cargo.toml
mawaku-rs/mawaku-image/src/: lib.rs  tests.rs
mawaku-rs/mawaku-utils/: Cargo.toml
mawaku-rs/mawaku-utils/src/: lib.rs
src/: main.rs
