[package]
name = "mawaku"
version = "0.0.0"
edition = "2024"
description = "Command-line tool scaffold for generating video call backgrounds"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "backgrounds", "video"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
