[workspace]
members = ["mawaku-cli", "mawaku-config", "mawaku-gemini", "mawaku-image", "mawaku-utils"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
