[package]
name = "mawaku"
version = "0.1.0"
edition.workspace = true
description = "Command-line tool scaffold for generating video call backgrounds"
license.workspace = true
readme = "../../README.md"
keywords = ["cli", "backgrounds", "video"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
mawaku-config = { path = "../mawaku-config" }
mawaku-gemini = { path = "../mawaku-gemini" }
mawaku-image = { path = "../mawaku-image" }
mawaku-utils = { path = "../mawaku-utils" }

[dev-dependencies]
toml = { workspace = true }
