[package]
name = "mawaku"
version = "0.1.0"
edition.workspace = true
description = "Command-line tool scaffold for generating video call backgrounds"
license.workspace = true
readme = "../../README.md"
keywords = ["cli", "backgrounds", "video"]
categories = ["command-line-utilities"]

[dependencies]
clap = { workspace = true }
mawaku-config = { path = "../mawaku-config", version = "0.1.0" }
mawaku-gemini = { path = "../mawaku-gemini", version = "0.1.0" }
mawaku-image = { path = "../mawaku-image", version = "0.1.0" }
mawaku-utils = { path = "../mawaku-utils", version = "0.1.0" }

[dev-dependencies]
toml = { workspace = true }
