[package]
name = "mawaku-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Configuration loader for the Mawaku CLI"

[lib]
name = "mawaku_config"
path = "src/lib.rs"

[dependencies]
directories = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
