[package]
name = "mawaku-gemini"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
